Install dependencies and configure environment setup

--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/thara-messeroux/intro-to-mongoose-lab/issues"
   },
-  "homepage": "https://github.com/thara-messeroux/intro-to-mongoose-lab#readme"
+  "homepage": "https://github.com/thara-messeroux/intro-to-mongoose-lab#readme",
+  "dependencies": {
+    "dotenv": "^17.3.1",
+    "mongoose": "^9.2.1",
+    "prompt-sync": "^4.2.0"
+  }
 }
